...
    <string name="hyundai" translatable="false">Hyundai</string>
    <string name="honda" translatable="false">Honda</string>
    <string name="toyota" translatable="false">Toyota</string>
    <string name="tata" translatable="false">Tata</string>
    <string name="mahindra" translatable="false">Mahindra</string>
    <string name="ford" translatable="false">Ford</string>
    <string name="chevrolet" translatable="false">Chevrolet</string>
    <string name="audi" translatable="false">Audi</string>
    <string name="volkswagen" translatable="false">Volkswagen</string>
    <string name="bmw" translatable="false">BMW</string>
    <string name="renault" translatable="false">Renault</string>
    <string name="mercedes" translatable="false">Mercedes</string>
    <string name="nissan" translatable="false">Nissan</string>
...
    <string name="error_select_overall_condition">Please select overall condition first</string>
    <string name="hint_name_number">Enter name or number</string>
    <string name="search_lead">Search</string>
    <string name="bring_to_top" translatable="false">Bring to top</string>
    <string name="status_walked_in">Walked-in</string>
    <string name="status_walked_in_scheduled">Walk-in\nScheduled</string>
    <string name="status_booked">Booked</string>
    <string name="status_converted">Converted</string>
    <string name="title_activity_search_cars_list">Search List</string>
    <string name="update_price">Update Price</string>
    <string name="app_upgrade_title" translatable="false">Upgrade available</string>
    <string name="app_upgrade_message" translatable="false">A new version of this app is available. Please update your current version.</string>
    <string name="upgrade_now">Update now</string>
...
    <string name="new_case">New Case</string>

    <string name="even">Even</string>
    <string name="odd">Odd</string>

    <!--Loan offers strings-->
    <string name="reg_no">Registration Number*</string>
    <string name="rsa">Road Side Assistance (RSA)</string>
    <string name="title_activity_issue_policy">Issue Policy</string>
    <string name="registrationNumber">Reg. No. - %1$s</string>

    <string name="error_customer_name_required">Customer Name is required</string>
    <string name="error_customer_name_invalid">Customer name should be 3 or more characters long</string>
...
