...
                android:id="@+id/multiple_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                fab:fab_addButtonColorNormal="@color/white"
                fab:fab_addButtonColorPressed="@color/white_pressed"
                fab:fab_addButtonSize="mini"
                fab:fab_addButtonPlusIconColor="@color/half_black"
                fab:fab_expandDirection="down"
                fab:fab_labelStyle="@style/menu_labels_style"
                android:layout_marginTop="16dp"
...
