...
            android:textColor="@color/white"
            android:textSize="16sp" />
        <!--</LinearLayout>
-->

        <LinearLayout
            android:id="@+id/totalCases"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="25dp"
            android:layout_weight="1"
            android:clickable="false"
...
