...
            android:id="@+id/inspected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textStyleHeading2"
            android:layout_marginLeft="10dp"
            android:textSize="10sp"
            android:text="Inspected"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/insurance_orange"
            android:background="@drawable/inspected_bg" />
...
